--- a/.gitignore
+++ b/.gitignore
@@ -91,6 +91,22 @@ gradle-app.setting
 .classpath
 
 #########
+# CMake #
+#########
+
+CMakeLists.txt.user
+CMakeCache.txt
+CMakeFiles
+CMakeScripts
+Testing
+Makefile
+cmake_install.cmake
+install_manifest.txt
+compile_commands.json
+CTestTestfile.cmake
+_deps
+
+#########
 # Misc. #
 #########
 
